<resources>
    <string name="IDS_REMOTE_INTERRUPTED_RECORDING_MOVIE_BY_CAMERA">Recording canceled.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_BATTERY">Low battery; cannot start remote photography.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_EXPOSURE_MODE">Incompatible shooting mode selected; cannot start remote photography. Select mode P, S, A, or M.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_LIVEVIEW_ON">Cannot start remote photography. Check the camera. Remote photography cannot be used while live view is active on the camera or the camera shooting is in progress.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_MEMORY_CARD">Cannot start remote photography. Check the memory card.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_POWER_OFF">Camera signal lost.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_TEMPERATURE">Cannot start remote photography. Wait for the camera or wireless mobile adapter to cool.</string>
    <string name="IDS_REMOTE_NOT_START_REMOTE_BY_ZOOM_LENS">Cannot start remote photography. Lens retracted.</string>
    <string name="MID_APPS_MV2_INFO">"The Nikon Manual Viewer 2 viewer app can be used to download and view manuals for Nikon digital SLR cameras.
Downloading the manual for your camera gives you the security of knowing that you can view it anywhere, anytime, online or off."</string>
    <string name="MID_APPS_MV2_NAME">Manual Viewer 2</string>
    <string name="MID_APPS_NIS_INFO">This free app for Nikon’s NIKON IMAGE SPACE photo sharing service brings your photos closer and enhances your post-shooting enjoyment. It is devoted to three simple features—viewing, organizing, and sharing photos—that will make the lives of photo lovers everywhere more convenient, pleasant, and streamlined.</string>
    <string name="MID_APPS_NIS_NAME">NIKON IMAGE SPACE</string>
    <string name="MID_APP_CD_COLOR_LIST_BLACK">Black</string>
    <string name="MID_APP_CD_COLOR_LIST_BLUE">Blue</string>
    <string name="MID_APP_CD_COLOR_LIST_BROWN">Brown</string>
    <string name="MID_APP_CD_COLOR_LIST_DARKGRAY">Dark gray</string>
    <string name="MID_APP_CD_COLOR_LIST_WHITE">White</string>
    <string name="MID_APP_CD_COLOR_TITLE">Color</string>
    <string name="MID_APP_CD_CREDIT_ADD">Add credits</string>
    <string name="MID_APP_CD_CREDIT_NOTE">Embed shooting information or comments in images.</string>
    <string name="MID_APP_CD_CREDIT_POSITION">Position</string>
    <string name="MID_APP_CD_CREDIT_PREV">Preview</string>
    <string name="MID_APP_CD_CREDIT_TYPE">Type</string>
    <string name="MID_APP_CD_FONT_LIST_BOLD">Bold</string>
    <string name="MID_APP_CD_FONT_LIST_ITALIC">Italic</string>
    <string name="MID_APP_CD_FONT_LIST_NORMAL">Regular</string>
    <string name="MID_APP_CD_FONT_TITLE">Style</string>
    <string name="MID_APP_CD_POS_LEFT_BOTTOM">Bottom left</string>
    <string name="MID_APP_CD_POS_LEFT_TOP">Top left</string>
    <string name="MID_APP_CD_POS_RIGHT_BOTTOM">Bottom right</string>
    <string name="MID_APP_CD_POS_RIGHT_TOP">Top right</string>
    <string name="MID_APP_CD_SIZE_LIST_BIG">Large</string>
    <string name="MID_APP_CD_SIZE_LIST_MIDDLE">Medium</string>
    <string name="MID_APP_CD_SIZE_LIST_SMALL">Small</string>
    <string name="MID_APP_CD_SIZE_TITLE">Size</string>
    <string name="MID_APP_CD_TEXT_TITLE">Enter description</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_COMMENT">Image Comment</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_DATE">Time shot</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_INDEX">File/photo info</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_LIST_INFO">Photo information</string>
    <string name="MID_APP_CD_TYPE_PHOTOINFO_LIST_PHOTOGRAPHER_AND_COPYRIGHT">Photographer/copyright holder</string>
    <string name="MID_APP_CD_TYPE_TITLE">Credit type</string>
    <string name="MID_APP_CD_TYPE_USER_SETTING_LIST_COMMENT">Comment</string>
    <string name="MID_APP_CD_TYPE_USER_SETTING_LIST_SNAPBRIDGE_LOGO">SnapBridge logo</string>
    <string name="MID_APP_CD_USER_SETTING_TITLE">User setting</string>
    <string name="MID_APP_CREDIT">Show credits</string>
    <string name="MID_APP_HASH">Add hashtag</string>
    <string name="MID_APP_NIKONID_SETTING">Nikon ID sign up/edit profile</string>
    <string name="MID_APP_SUPPORT_SITE">Support</string>
    <string name="MID_APP_TERMS_OF_USE">License Agreement</string>
    <string name="MID_APP_TERMS_OF_USE_AGREEMENT_CHECK">Accept the Application License Agreement</string>
    <string name="MID_APP_TERMS_OF_USE_DESC">For information on Terms of Service and other agreements for the various services involved in using this app, see “%s”.</string>
    <string name="MID_APP_TERMS_OF_USE_DESC_TERMS_OF_USE">License Agreement</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_MOVIE">Ready camera for movie recording</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_REMOTE">Cannot complete operation. Check camera settings.</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_START_REMOTE">Remote control not available</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_START_REMOTE_BY_CAMERA">Remote control not available. Check camera status.</string>
    <string name="MID_BLE_REMOTE_ALERT_CANT_STILL">Ready camera to take photographs</string>
    <string name="MID_BLE_REMOTE_ALERT_CAN_START_AFTER_FINISH_SENDING">Remote control will begin when download is complete.</string>
    <string name="MID_BLE_REMOTE_BULBE_SHOOTING">Bulb photography in progress</string>
    <string name="MID_BLE_REMOTE_CAMERA_STATE_ERROR">Check camera settings.</string>
    <string name="MID_BLE_REMOTE_CHANGE_MODE">Remote Control Options</string>
    <string name="MID_BLE_REMOTE_CONFIRM_FINISH">End Bluetooth remote control?</string>
    <string name="MID_BLE_REMOTE_CONTINUE_RETURN">Shooting operations currently in progress will continue. To return to the shooting display, tap \"Bluetooth remote control\".</string>
    <string name="MID_BLE_REMOTE_CONTINUE_SHOOTING">Shooting will continue after app is closed</string>
    <string name="MID_BLE_REMOTE_DESCRIBE">Take pictures remotely while framing the shots in the camera monitor, or play pictures back on TVs or other displays.</string>
    <string name="MID_BLE_REMOTE_DESCRIBE_CHANGE">Use the button to toggle between the two options.</string>
    <string name="MID_BLE_REMOTE_END_DATE_TIME">End day/time</string>
    <string name="MID_BLE_REMOTE_END_HALF_PRESS">End half-press</string>
    <string name="MID_BLE_REMOTE_END_SHOOTING">End shooting</string>
    <string name="MID_BLE_REMOTE_FINISH_TIME_SHOOTING">Tap shutter-release button to end</string>
    <string name="MID_BLE_REMOTE_FOCUS_SHIFT">Focus shift shooting</string>
    <string name="MID_BLE_REMOTE_FOCUS_SHIFT_SHOOTING">Focus shift shooting in progress</string>
    <string name="MID_BLE_REMOTE_INTERVAL">Interval timer shooting</string>
    <string name="MID_BLE_REMOTE_INTERVAL_SHOOTING">Interval timer shooting in progress</string>
    <string name="MID_BLE_REMOTE_NUMBER_SHOTS">Number of intervals remaining</string>
    <string name="MID_BLE_REMOTE_PRESS_HALF_BUTTON">Press halfway</string>
    <string name="MID_BLE_REMOTE_SHOOTING">Shooting in progress</string>
    <string name="MID_BLE_REMOTE_SPECIAL_GUIDE">Adjust shooting settings on the camera</string>
    <string name="MID_BLE_REMOTE_SPECIAL_SHOOTING">Other shooting options</string>
    <string name="MID_BLE_REMOTE_START_SHOOTING">Start shooting</string>
    <string name="MID_BLE_REMOTE_TIME_LAPSE">Time-lapse movie recording</string>
    <string name="MID_BLE_REMOTE_TIME_LAPSE_SHOOTING">Time-lapse movie recording in progress</string>
    <string name="MID_BLE_REMOTE_TIME_SHOOTING">Time photography in progress</string>
    <string name="MID_BLE_REMOTE_WIFI_CANCEL">Switch to Bluetooth before using Bluetooth remote control.</string>
    <string name="MID_CAMERA_CONNECTION_AUTO_TRANSFER_IN_PROGRESS">Auto download in progress…(%1$d/%2$d)</string>
    <string name="MID_CAMERA_CONNECTION_CONNECTING_TO_CAMERA">Connecting to camera.</string>
    <string name="MID_CAMERA_CONNECTION_READYING_AUTO_TRANSFER">Readying pictures for auto download. Please wait.</string>
    <string name="MID_CAMERA_CONNECTION_READYING_AUTO_TRANSFER_SUMMARY">Readying pictures for auto download</string>
    <string name="MID_CAMERA_CONNECTION_UNABLE_TO_RECEIVE_BLUETOOTH_SIGNAL">Camera Bluetooth not detected. Check that Bluetooth is enabled on the camera.</string>
    <string name="MID_CAMERA_CONNECTION_WAITING_CAMERA_RESPONSE">Camera Bluetooth detected. App features can be used.</string>
    <string name="MID_CAMERA_IMPORTING_TITLE">Downloading Pictures…</string>
    <string name="MID_CAM_ACTIVE_BLE_REMOTE">Bluetooth remote control</string>
    <string name="MID_CAM_ACTIVE_BTC_DLG_MSG">Please wait.</string>
    <string name="MID_CAM_ACTIVE_BTC_DLG_TITLE">Readying camera…</string>
    <string name="MID_CAM_ACTIVE_CHANGE_WIFI_DLG_TITLE">Enable camera Wi-Fi</string>
    <string name="MID_CAM_ACTIVE_DLG_CHANGE_WIFI_DLG_MSG_1">"You must switch to Wi-Fi to use this feature.
Note: Some time may be required to switch."</string>
    <string name="MID_CAM_ACTIVE_DLG_MSG_1">"End pairing with this camera?
Note: You can only connect to the camera when it is paired with your device."</string>
    <string name="MID_CAM_ACTIVE_DLG_MSG_3">Use the “forget” option in the Bluetooth section of the iOS Settings app to remove the camera from the list of paired devices, as otherwise you will not be able to pair with the camera again.</string>
    <string name="MID_CAM_ACTIVE_DLG_TITLE">End pairing?</string>
    <string name="MID_CAM_ACTIVE_IMPORT">Download pictures</string>
    <string name="MID_CAM_ACTIVE_REMOTE">Remote photography</string>
    <string name="MID_CAM_ACTIVE_SERIAL">Serial No.</string>
    <string name="MID_CAM_ACTIVE_SYNC">Auto link options</string>
    <string name="MID_CAM_ACTIVE_WIFI_DLG_MSG_0">"Starting camera Wi-Fi.
Please wait."</string>
    <string name="MID_CAM_ACTIVE_WIFI_DLG_MSG_1">"Connecting to camera via Wi-Fi.
Please wait."</string>
    <string name="MID_CAM_ADD_LIMIT_NUMBER_OF_CAMERA_PAIRING">SnapBridge can store pairing information for up to 5 cameras</string>
    <string name="MID_CAM_ADD_PAIRING">Add camera</string>
    <string name="MID_CAM_CHANGE_BLE_REMOTE">Switch to Bluetooth remote control</string>
    <string name="MID_CLD_FINISH_FINISH_INFO">You can now upload pictures to NIKON IMAGE SPACE. You have not yet finished signing up for a Nikon ID, however.</string>
    <string name="MID_CLD_FINISH_FINISH_TITLE">To finish signup, click the link in the body of the e-mail we have sent you.</string>
    <string name="MID_CLD_FINISH_INFO">Your registration will automatically be canceled if you do not complete the process in 30 days.</string>
    <string name="MID_CLD_START">Start</string>
    <string name="MID_CLD_UPLOAD">Auto upload</string>
    <string name="MID_CLD_UPLOAD_ENABLE_INDEX">Upload pictures automatically when:</string>
    <string name="MID_CLD_UPLOAD_ENABLE_ONLY_WIFI_ON">Connected via Wi-Fi only</string>
    <string name="MID_CLD_UPLOAD_ENABLE_ONLY_WIFI_ON_DESC">Settings can be adjusted so that pictures are uploaded automatically only via Wi-Fi. Uploads may contain large amounts of data; be careful not to exceed your provider’s data limits.</string>
    <string name="MID_CLD_UPLOAD_INFO">Pictures downloaded from the camera can automatically be uploaded to NIKON IMAGE SPACE.</string>
    <string name="MID_COMMON_CANCEL">Cancel</string>
    <string name="MID_COMMON_NEXT">Next</string>
    <string name="MID_COMMON_OK">OK</string>
    <string name="MID_IMPORT_ALERT_MSG1">Do not show this message again</string>
    <string name="MID_PTP_REMOTE_DESCRIBE">Take pictures remotely while framing the shots on the smart device.</string>
    <string name="app_name">SnapBridge</string>
</resources>