<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_normal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:background="@drawable/btn_blank2_last_normal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="@dimen/margin_16dp">
            <TextView android:textSize="@dimen/fsize_16dp" android:textStyle="normal" android:textColor="@color/white" android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginRight="@dimen/margin_60dp" android:text="@string/MID_CLD_UPLOAD" />
            <Switch android:id="@id/sw_item0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginRight="@dimen/margin_16dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:translationZ="99.0dip" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/fsize_12dp" android:textStyle="normal" android:textColor="@color/dark_gray" android:gravity="left" android:id="@id/lbl_info0" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginTop="@dimen/margin_8dp" android:layout_marginRight="@dimen/margin_16dp" android:text="@string/MID_CLD_UPLOAD_INFO" android:textAllCaps="false" />
        <TextView android:textSize="@dimen/fsize_12dp" android:textStyle="normal" android:textColor="@color/gray" android:gravity="center|left" android:id="@id/lbl_title1" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginTop="@dimen/margin_16dp" android:layout_marginRight="@dimen/margin_16dp" android:layout_marginBottom="@dimen/margin_8dp" android:text="@string/MID_CLD_UPLOAD_ENABLE_INDEX" android:textAllCaps="false" />
        <RelativeLayout android:id="@id/v_item1" android:background="@drawable/btn_blank2_last_normal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginBottom="@dimen/margin_8dp">
            <TextView android:textSize="@dimen/fsize_16dp" android:textStyle="normal" android:textColor="@color/white" android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginRight="@dimen/margin_60dp" android:text="@string/MID_CLD_UPLOAD_ENABLE_ONLY_WIFI_ON" />
            <Switch android:id="@id/sw_item1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginRight="@dimen/margin_16dp" android:layout_alignParentRight="true" android:translationZ="99.0dip" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/fsize_12dp" android:textStyle="normal" android:textColor="@color/dark_gray" android:gravity="left" android:id="@id/lbl_info1" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginRight="@dimen/margin_16dp" android:layout_marginBottom="@dimen/margin_16dp" android:text="@string/MID_CLD_UPLOAD_ENABLE_ONLY_WIFI_ON_DESC" android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>