<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:tag="layout/fragment_special_shooting_mode_select_0" android:background="@color/bg_normal" android:paddingTop="@dimen/dimen_56dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="@dimen/general_constraint_match_constraint" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
        <RadioGroup android:id="@id/special_shooting_selected_state" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:textSize="@dimen/fsize_14dp" android:textColor="@color/white" android:id="@id/radio_interval_timer" android:background="@drawable/btn_blank2_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:minHeight="@dimen/setting_item_height" android:text="@string/MID_BLE_REMOTE_INTERVAL" android:drawableEnd="@drawable/btn_check" android:paddingStart="@dimen/dimen_16dp" android:paddingEnd="@dimen/dimen_16dp" />
            <RadioButton android:textSize="@dimen/fsize_14dp" android:textColor="@color/white" android:id="@id/radio_time_lapse" android:background="@drawable/btn_blank2_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:button="@null" android:minHeight="@dimen/setting_item_height" android:text="@string/MID_BLE_REMOTE_TIME_LAPSE" android:drawableEnd="@drawable/btn_check" android:paddingStart="@dimen/dimen_16dp" android:paddingEnd="@dimen/dimen_16dp" />
            <RadioButton android:textSize="@dimen/fsize_14dp" android:textColor="@color/white" android:id="@id/radio_focus_shift" android:background="@drawable/btn_blank2_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:button="@null" android:minHeight="@dimen/setting_item_height" android:text="@string/MID_BLE_REMOTE_FOCUS_SHIFT" android:drawableEnd="@drawable/btn_check" android:paddingStart="@dimen/dimen_16dp" android:paddingEnd="@dimen/dimen_16dp" />
        </RadioGroup>
        <TextView android:textSize="@dimen/fsize_12dp" android:textColor="@color/gray_a0a0a0" android:id="@id/text_warning" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/MID_BLE_REMOTE_SPECIAL_GUIDE" android:layout_marginStart="@dimen/margin_16dp" android:layout_marginEnd="@dimen/margin_16dp" />
    </LinearLayout>
    <ImageButton android:id="@id/execute_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="100.0dip" android:src="@drawable/ble_remote_controller_special_shooting_start_button" android:contentDescription="@null" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
    <TextView android:textSize="@dimen/fsize_14dp" android:textColor="@color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_8dp" android:layout_marginRight="@dimen/dimen_8dp" android:text="@string/MID_BLE_REMOTE_START_SHOOTING" app:layout_constrainedWidth="true" app:layout_constraintBottom_toBottomOf="@id/execute_button" app:layout_constraintEnd_toEndOf="@id/execute_button" app:layout_constraintStart_toStartOf="@id/execute_button" app:layout_constraintTop_toTopOf="@id/execute_button" />
</android.support.constraint.ConstraintLayout>