<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:id="@id/remote_tutorial_dialog" android:background="@drawable/dialog_bg" android:layout_width="@dimen/dialog_width" android:layout_height="wrap_content" android:layout_centerInParent="true" android:splitMotionEvents="false">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/body" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:splitMotionEvents="false">
            <TextView android:textSize="@dimen/fsize_16dp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/lbl_title" android:background="@null" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_16dp" android:layout_marginBottom="@dimen/margin_30dp" android:text="@string/MID_BLE_REMOTE_CHANGE_MODE" android:textAllCaps="false" />
            <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="@dimen/dimen_20dp">
                <android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/fsize_14dp" android:textStyle="normal" android:textColor="@color/gray" android:gravity="start" android:id="@id/lbl_remote_title" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/MID_CAM_ACTIVE_REMOTE" android:textAllCaps="false" android:paddingStart="@dimen/margin_16dp" android:paddingEnd="@dimen/margin_16dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <TextView android:textSize="@dimen/fsize_12dp" android:textStyle="normal" android:textColor="@color/gray" android:gravity="start" android:id="@id/lbl_remote_text" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/MID_PTP_REMOTE_DESCRIBE" android:lineSpacingMultiplier="1.0" android:textAllCaps="false" android:paddingStart="@dimen/margin_16dp" android:paddingEnd="@dimen/margin_16dp" app:layout_constraintEnd_toEndOf="@id/lbl_remote_title" app:layout_constraintStart_toStartOf="@id/lbl_remote_title" app:layout_constraintTop_toBottomOf="@id/lbl_remote_title" />
                    <TextView android:textSize="@dimen/fsize_14dp" android:textStyle="normal" android:textColor="@color/gray" android:gravity="start" android:id="@id/lbl_ble_title" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20dp" android:text="@string/MID_CAM_ACTIVE_BLE_REMOTE" android:textAllCaps="false" android:paddingStart="@dimen/margin_16dp" android:paddingEnd="@dimen/margin_16dp" app:layout_constraintEnd_toEndOf="@id/lbl_remote_title" app:layout_constraintStart_toStartOf="@id/lbl_remote_title" app:layout_constraintTop_toBottomOf="@id/lbl_remote_text" />
                    <TextView android:textSize="@dimen/fsize_12dp" android:textStyle="normal" android:textColor="@color/gray" android:gravity="start" android:id="@id/lbl_ble_text1" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/MID_BLE_REMOTE_DESCRIBE" android:lineSpacingMultiplier="1.0" android:textAllCaps="false" android:paddingStart="@dimen/margin_16dp" android:paddingEnd="@dimen/margin_16dp" app:layout_constraintEnd_toEndOf="@id/lbl_remote_title" app:layout_constraintStart_toStartOf="@id/lbl_remote_title" app:layout_constraintTop_toBottomOf="@id/lbl_ble_title" />
                    <ImageView android:id="@id/iv_dialog_image" android:background="@drawable/help_bluetooth_remote" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_12dp" android:contentDescription="@null" app:layout_constraintLeft_toRightOf="parent" app:layout_constraintRight_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/lbl_ble_text1" />
                    <TextView android:textSize="@dimen/fsize_12dp" android:textStyle="normal" android:textColor="@color/gray" android:gravity="start" android:id="@id/lbl_ble_text2" android:paddingBottom="@dimen/dimen_32dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_2dp" android:text="@string/MID_BLE_REMOTE_DESCRIBE_CHANGE" android:textAllCaps="false" android:paddingStart="@dimen/margin_16dp" android:paddingEnd="@dimen/margin_16dp" app:layout_constraintEnd_toEndOf="@id/lbl_remote_title" app:layout_constraintStart_toStartOf="@id/lbl_remote_title" app:layout_constraintTop_toBottomOf="@id/iv_dialog_image" />
                </android.support.constraint.ConstraintLayout>
            </ScrollView>
            <RelativeLayout android:id="@id/v_bottom" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_56dp" android:splitMotionEvents="false">
                <Button android:textSize="@dimen/fsize_18dp" android:textStyle="normal" android:textColor="@color/gray" android:gravity="center" android:id="@id/btn_ok" android:background="@drawable/dialog_btn0" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_56dp" android:text="@string/MID_COMMON_OK" android:textAllCaps="false" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>