<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@drawable/launch_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:enabled="false" android:textSize="@dimen/fsize_14dp" android:textStyle="bold" android:textColor="@color/btn_text_white" android:ellipsize="end" android:id="@id/button_start" android:background="@drawable/btn_blank1" android:layout_width="@dimen/dimen_260dp" android:layout_height="@dimen/dimen_48dp" android:layout_marginBottom="@dimen/dimen_24dp" android:text="@string/MID_CLD_START" android:lines="2" android:layout_centerHorizontal="true" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
    <TextView android:textSize="@dimen/fsize_15dp" android:textColor="@color/white" android:gravity="start|center" android:id="@id/text_check_app_agree" android:background="@color/black_323232" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44dp" android:layout_marginTop="140.0dip" android:text="@string/MID_APP_TERMS_OF_USE_AGREEMENT_CHECK" android:drawablePadding="@dimen/dimen_16dp" android:drawableStart="@drawable/btn_check_license" android:paddingStart="@dimen/dimen_16dp" android:paddingEnd="@dimen/dimen_16dp" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/fsize_13dp" android:textColor="@color/white" android:id="@id/text_describe_app" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8dp" android:layout_marginStart="@dimen/dimen_16dp" android:layout_marginEnd="@dimen/dimen_16dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_check_app_agree" />
    <TextView android:textSize="@dimen/fsize_24dp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_16dp" android:layout_marginTop="@dimen/dimen_36dp" android:layout_marginRight="@dimen/dimen_16dp" android:text="@string/app_name" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>